# Kaseeder

./: .gitignore  CONFIGURATION_GUIDE.md  Cargo.toml  DEVELOPMENT_GUIDE.md  Dockerfile  FIXES_SUMMARY.md  NETWORK_TROUBLESHOOTING.md  OPTIMIZATION_NOTES.md  README.md  README_INTEGRATION.md  README_RUST.md  USAGE_GUIDE.md  build.rs  debug_ipv6  dnsseeder.conf.example  docker-compose.yml  kaseeder.async.test.conf  kaseeder.conf  kaseeder.conf.example  kaseeder.conf.optimized  kaseeder.dev.conf  kaseeder.final.test.conf  kaseeder.simple.conf  kaseeder.test.conf  kaseeder.test.fixed.conf  test.conf  test_config.conf  test_dns  test_dns.rs  test_dns_debug  test_dns_debug.rs  test_dns_discovery.rs  test_dns_proxy.rs  test_dns_simple  test_dns_simple.rs  test_fix.sh  test_proxy.conf
data/: peers.json
data/async_test/: peers.json
data/final_test/: peers.json
data/mainnet/: peers.json
data/simple/: peers.json
data/test_fixed/: peers.json
logs/: dnsseeder.2025-08-21  kaseeder.2025-08-21
proto/: dnsseeder.proto  kaseeder.proto
scripts/: check_status.sh  dev_run.sh  network_check.sh  performance_test.sh  start_seeder.sh  test_dns_discovery.sh
src/: checkversion.rs  config.rs  constants.rs  crawler.rs  dns.rs  dns_seed_config.rs  dns_seed_discovery.rs  errors.rs  grpc.rs  kaspa_protocol.rs  lib.rs  logging.rs  main.rs  manager.rs  monitor.rs  netadapter.rs  profiling.rs  types.rs  version.rs
