[package]
name = "dnsseeder"
version = "0.1.0"
edition = "2024"
authors = ["DNSSeeder Team"]
description = "DNS seeder for Kaspa network"
license = "ISC"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 网络和DNS
trust-dns-server = "0.23"
trust-dns-proto = "0.23"
trust-dns-resolver = "0.23"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"

# 配置管理
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
dirs = "5.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 网络协议
tokio-tungstenite = "0.20"
futures-util = "0.3"
futures = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 随机数
rand = "0.8"
rand_core = "0.6"

# 序列化
bincode = "1.3"

# 数据库
sled = "0.34"

# HTTP服务器
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# gRPC
tonic = "0.9"
prost = "0.11"

# 其他工具
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.0"
async-trait = "0.1"
once_cell = "1.18"

# HTTP客户端（支持代理）
reqwest = { version = "0.11", features = ["json", "socks"] }

# 系统信息监控
sysinfo = "0.29"

# Rusty Kaspa 相关依赖
kaspa-utils = { path = "../rusty-kaspa/utils" }
kaspa-core = { path = "../rusty-kaspa/core" }
kaspa-consensus-core = { path = "../rusty-kaspa/consensus/core" }
kaspa-addressmanager = { path = "../rusty-kaspa/components/addressmanager" }
kaspa-p2p-lib = { path = "../rusty-kaspa/protocol/p2p" }
kaspa-utils-tower = { path = "../rusty-kaspa/utils/tower" }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
