[package]
name = "kaseeder"
version = "0.1.0"
edition = "2021"
authors = ["kaseeder Team"]
description = "DNS seeder for Kaspa network"
license = "ISC"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Network and DNS
trust-dns-server = "0.23"
trust-dns-proto = "0.23"
trust-dns-resolver = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"

# Configuration management
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Network protocols
tokio-tungstenite = "0.20"
futures-util = "0.3"
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"
rand_core = "0.6"

# Database
sled = "0.34"

# HTTP server
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# gRPC
tonic = "0.9"
prost = "0.11"

# Other utilities
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.0"
async-trait = "0.1"
once_cell = "1.18"

# HTTP client (with proxy support)
reqwest = { version = "0.11", features = ["json", "socks"] }

# System information monitoring
sysinfo = "0.29"

# Kaspa related dependencies - using local paths to avoid rocksdb compilation issues
# These local dependencies use compatible rocksdb versions
kaspa-utils = { path = "../rusty-kaspa/utils" }
kaspa-core = { path = "../rusty-kaspa/core" }
kaspa-consensus-core = { path = "../rusty-kaspa/consensus/core" }
kaspa-addressmanager = { path = "../rusty-kaspa/components/addressmanager" }
kaspa-p2p-lib = { path = "../rusty-kaspa/protocol/p2p" }
kaspa-utils-tower = { path = "../rusty-kaspa/utils/tower" }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
